0-3_AI_Evaluation_Engine/설계문서_V7.0/V40/instructions/3_evaluate/cat01_expertise.md
# Category 01: Expertise (전문성) - 평가 지침서 V40

---

## 1. 카테고리 정의

### 한글 정의
직무 수행에 필요한 지식, 기술, 경험의 보유 수준

### 영문 정의
The level of knowledge, skills, and experience required to perform duties effectively

### 학술 근거
- **Stoker (2024)**: Competence의 핵심, "필요한 지식과 기술 보유"
- **Slough (2024)**: 4차원 능력의 기반
- **Volden & Wiseman (2024)**: LES 프레임워크의 전문성 측정
- **LEVER (2024)**: 입법 효과성의 핵심 요소

---

## 2. V40 평가 방식 - 풀링 평가

### 평가 대상 데이터

수집 단계에서 collected_data_v40 테이블에 저장된 풀링 데이터 전체를 평가합니다.

4개 평가 AI (Claude Haiku 4.5, ChatGPT gpt-5.1-codex-mini, Gemini 2.0 Flash, Grok 3)가
각각 전체 풀링 데이터를 독립적으로 평가합니다.

### 평가 독립성

```
타이밍 분리 = 객관성 보장

[평가 단계] - 수집과 다른 세션, 다른 시점
→ Claude (Haiku 4.5), ChatGPT (gpt-5.1-codex-mini), Gemini (2.0 Flash), Grok (3)이 평가
→ 수집 시점 ≠ 평가 시점
→ 독립적 판단 = 더 객관적
```

---

## 3. 평가 범위 - 구체적 10개 항목 기준

### 🎯 전문성 = 📚 지식/학력/자격/경력 관련만!

⚠️ **아래 10개 항목을 기준으로 평가하세요.**

### ✅ [O] 전문성 평가 기준 10개 항목

| # | 항목명 | 설명 |
|---|--------|------|
| 1-1 | **최종 학력 수준** | 박사/석사/학사/전문대 학위 |
| 1-2 | **직무 관련 자격증** | 변호사, CPA, 교원자격증 등 |
| 1-3 | **관련 분야 경력 연수** | 공직+민간 경력 합산 |
| 1-4 | **직무 교육 이수** | 의회/기관 교육 참여 시간 |
| 1-5 | **전문 분야 기고/저서** | 전문지 기고, 저서 출판 |
| 1-6 | **학술 연구 실적** | 논문, Google Scholar 피인용 |
| 1-7 | **위키피디아 전문성 기술** | 학력/경력 조회수 |
| 1-8 | **전문 분야 평가 기록** | 학술/전문 분야 외부 평가 |
| 1-9 | **위원회 활동 기록** | 자문위원, 심의위원 활동 |
| 1-10 | **전문성 관련 언론 평가** | 전문성 키워드 보도 |

💡 **이 10개 항목 외의 내용은 다른 카테고리입니다!**

### ❌ [X] 전문성 아님 - 다른 카테고리

```
❌ 조직 관리/위기 대응 → 리더십 (2)
❌ 혁신 아이디어/미래 전략 → 비전 (3)
❌ 부패/비리 → 청렴성 (4)
❌ 법안 발의 (실적만 해당) → 책임감 (6)
```

---

## 4. 등급 체계 (+4 ~ -4) - V40

**숫자 기반 명확한 기준**

| 등급 | 점수(×2) | 객관적 기준 |
|------|----------|-------------|
| **+4** | +8 | 탁월 - 법률 제정, 국가 인정, 대통령 표창 수준 |
| **+3** | +6 | 우수 - 정책 성과 수치화 가능 (법안 다수 통과) |
| **+2** | +4 | 양호 - 일반 긍정 활동 (법안 발의, 정책 제안) |
| **+1** | +2 | 경미한 긍정 - 노력, 참석, 기본 역량 |

| **-1** | -2 | 경미한 부정 - 전문성 비판, 지적 |
| **-2** | -4 | 일반 부정 - 전문성 논란, 의혹 제기 |
| **-3** | -6 | 심각한 부정 - 학력 위조 수사, 조사 착수 |
| **-4** | -8 | 최악 - 학력 위조 확정, 법적 처벌 |

| **X** | 0 | 평가 제외 - 10년 이상 과거, 동명이인, 무관 내용, 날조 정보 |

---

## 5. 등급 판단 세부 기준

### +4등급 (탁월함)
- 해당 분야 박사 학위 + 실무 경력 10년 이상
- 국가적 수준의 전문가로 인정
- 중요 법안 대표발의 다수 (10건 이상 통과)
- 언론/학계에서 전문가로 자주 인용

### +3등급 (우수함)
- 석사 이상 + 실무 경력 7년 이상
- 전문 분야에서 인정받는 역량
- 법안 발의 실적 우수 (5건 이상 통과)
- 관련 자격증 보유

### +2등급 (양호함)
- 학사 + 관련 경력 5년 이상
- 평균 이상의 직무 이해도
- 법안 발의 실적 있음
- 정책 이해도 양호

### +1등급 (경미한 긍정)
- 기본 학력 요건 충족
- 관련 경력 있음
- 직무 수행에 필요한 기본 역량
- 노력하는 모습 확인

### -1등급 (경미한 부정)
- 관련 분야 경력 부족
- 전문성 의문 제기된 사례 있음
- 법안/정책 이해도 부족 징후
- 개선 필요 영역 존재

### -2등급 (일반 부정)
- 학력/경력 부족
- 전문성 부족 비판 다수
- 직무 수행 역량 의문
- 관련 분야 성과 없음

### -3등급 (심각한 부정)
- 심각한 전문성 결여
- 기본적인 직무 이해 부족
- 학력 위조 의혹 등 수사 착수
- 다수의 비판적 평가

### -4등급 (최악)
- 학력 위조 확정
- 직무 수행 불가 수준
- 전문성 관련 법적 처벌
- 해당 직위 부적합

---

## 6. 평가 프로세스

### 입력 데이터
```
해당 카테고리의 풀링 데이터 전체
(collected_data_v40 테이블에서 조회)
```

### 평가 방법
1. **카테고리 풀링 데이터 전체 검토** (수집된 모든 데이터)
2. **각 데이터별 등급(+4 ~ -4) 부여**
3. **rating 필드에 숫자 문자열 기록 (예: "+3", "-2")**

### 평가 독립성
- 수집 채널과 평가 AI는 시점이 분리됨
- 각 평가 AI는 독립적으로 100개 전체 평가
- 자신이 수집한 데이터도 객관적으로 재평가

---

## 7. V40 기간 제한

평가 시에도 기간 제한 확인:

### OFFICIAL 데이터: 최근 4년
```
수집일 기준 최근 4년
```

### PUBLIC 데이터: 최근 2년
```
수집일 기준 최근 2년
```

---

## 8. 주의사항 (Pitfalls)

1. **학벌 과대평가 금지**: 명문대 = 높은 등급 X
2. **경력 허수 구별**: 명목상 경력 vs 실질적 경력
3. **무관 자격증 제외**: 정치와 무관한 자격증 고려 X
4. **시대 고려**: 과거 교육 환경 고려
5. **의혹 vs 확정 구분**: 학력 위조 의혹 vs 확정 판결

---

## 9. JSON 출력 형식

```json
{
  "evaluations": [
    {
      "id": "수집 데이터의 UUID",
      "rating": "+3",
      "rationale": "평가 근거 (한국어 1문장)"
    }
  ]
}
```

**핵심: rating 필드에 +4 ~ -4 또는 X 문자열 기록!**
**예시: "+4", "+3", "+2", "+1", "-1", "-2", "-3", "-4", "X"**

---

## 10. 체크리스트

- [ ] 카테고리 풀링 데이터 전체 평가 (수집된 모든 데이터)
- [ ] 각 데이터에 rating(+4 ~ -4 또는 X) 부여
- [ ] 등급 기준에 따른 일관된 평가
- [ ] 기간 제한 데이터만 평가
- [ ] rating은 문자열 (예: "+3", "-2", "X")

---

**V40 전문성 평가 지침서 끝**